--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2383,3 +2383,30 @@ nav {
         margin-bottom: 3rem;
     }
 }
+
+.sitemap {
+    margin-bottom: 4rem;
+}
+
+.sitemap h2 {
+    font-size: 24px;
+    margin-bottom: 2rem;
+}
+
+.sitemap-content {
+    width: 100%;
+}
+
+.sitemap-content img {
+    width: 100%;
+    height: auto;
+    border-radius: 12px;
+    object-fit: contain;
+    max-width: 100%;
+}
+
+@media (max-width: 768px) {
+    .sitemap {
+        margin-bottom: 3rem;
+    }
+}
